--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: python
 python:
   - "2.7"
 
-install:
-  - pip install -r requirements.txt
+virtualenv:
+  system_site_packages: true
+
+before_install:
+  - sudo apt-get install -qq python-numpy python-scipy
+
 script:
   - nosetests -v --with-doctest
